--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кекстаграм</title>
+  <link rel="stylesheet" href="nouislider/nouislider.css">
 
 </head>
 
@@ -40,7 +41,7 @@
             </fieldset>
 
             <!-- Форма редактирования изображения -->
-            <div class="img-upload__overlay hidden">
+            <div class="img-upload__overlay">
 <!--              -->
               <div class="img-upload__wrapper">
                 <div class="img-upload__preview-container">
@@ -48,7 +49,7 @@
                   <!-- Изменение размера изображения -->
                   <fieldset class="img-upload__scale  scale">
                     <button type="button" class="scale__control  scale__control--smaller">Уменьшить</button>
-                    <input type="text" class="scale__control  scale__control--value" value="55%" title="Image Scale" name="scale" readonly>
+                    <input type="text" class="scale__control  scale__control--value" value="100%" title="Image Scale" name="scale" readonly>
                     <button type="button" class="scale__control  scale__control--bigger">Увеличить</button>
                   </fieldset>
 
@@ -246,6 +247,7 @@
     </li>
   </template>
   <script src="pristine/pristine.min.js"></script>
+  <script src="nouislider/nouislider.js"></script>
 <script src="js/main.js" type="module"></script>
 </body>
 </html>
